# joint-position-controller_bk

./: initJointPositionController.m  jointPositionController.mdl
app/robots/iCubGazeboV2_5/: configRobot.m
app/robots/iCubGenova04/: configRobot.m
config/: homePose.ini
cpp/: CMakeLists.txt
cpp/Utilities/: .#CMakeLists.txt  CMakeLists.txt
cpp/app/: CMakeLists.txt
cpp/app/robots/iCubGazeboV2_5/: pidParams.ini
cpp/app/robots/iCubGazeboV3/: jointControlOptions.ini  jointDataset.txt  robotControl.ini
cpp/jointControlModule/: CMakeLists.txt
cpp/jointControlModule/include/: jointControl.hpp
cpp/jointControlModule/src/: RobotHelper.cpp  jointControl.cpp  main.cpp
data/: log__2019_05_27__21_00_48.mat  log__2019_05_29__09_49_49.mat  log__2019_05_29__11_20_39.mat  log__2019_05_29__12_04_15.mat  log__2019_05_29__17_25_49.mat  log__2019_06_02__20_08_52.mat  log__2019_06_05__17_19_49.mat
maltab/: initJointPositionController.m  jointPositionController.mdl
maltab/app/robots/iCubGazeboV2_5/: configRobot.m
maltab/data/: log__2019_05_29__10_22_48.mat  log__2019_05_29__15_18_10.mat  log__2019_06_02__19_02_28.mat  log__2019_06_03__20_59_29.mat  log__2019_06_03__22_38_38.mat  log__2019_06_04__14_02_03.mat  log__2019_06_06__11_15_11.mat  log__2019_06_06__13_01_37.mat  log__2019_06_06__16_18_49.mat
maltab/src/: quatern2rotMat.m
